Add privacy note

--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
             <h3>Results:</h3>
             <table id="fullTable"></table>
         </div>
+        
+        <div class="info-box" style="background-color: #e7f3fe; border-left: 6px solid #2196F3; margin-top: 30px; padding: 10px; font-size: 0.9em;">
+            <p><strong>Privacy Note:</strong> All calculations are done in your browser. Your data does not go to any servers.</p>
+            <p><a href="https://github.com/bmorton/cookietab" target="_blank">View source code on GitHub</a></p>
+        </div>
     </div>
 
     <!-- Load SheetJS library -->
